add 66 split files

--- a/split-openapi/components/examples/microsoft.graph.conditionalAccessConditionSet.yaml
+++ b/split-openapi/components/examples/microsoft.graph.conditionalAccessConditionSet.yaml
@@ -1,6 +1,8 @@
 value:
   applications:
     '@odata.type': microsoft.graph.conditionalAccessApplications
+  authenticationFlows:
+    '@odata.type': microsoft.graph.conditionalAccessAuthenticationFlows
   clientApplications:
     '@odata.type': microsoft.graph.conditionalAccessClientApplications
   clientAppTypes:
