--- a/split-openapi/components/schemas/microsoft.graph.keyCredentialConfiguration.yaml
+++ b/split-openapi/components/schemas/microsoft.graph.keyCredentialConfiguration.yaml
@@ -32,5 +32,7 @@ properties:
       The type of restriction being applied. Possible values are
       asymmetricKeyLifetime, and unknownFutureValue. Each value of
       restrictionType can be used only once per policy.
+  state:
+    $ref: .\microsoft.graph.appManagementRestrictionState.yaml
   '@odata.type':
     type: string
