--- a/split-openapi/components/schemas/microsoft.graph.passwordCredentialConfiguration.yaml
+++ b/split-openapi/components/schemas/microsoft.graph.passwordCredentialConfiguration.yaml
@@ -33,5 +33,7 @@ properties:
       passwordAddition, passwordLifetime, symmetricKeyAddition,
       symmetricKeyLifetime, customPasswordAddition, and unknownFutureValue. Each
       value of restrictionType can be used only once per policy.
+  state:
+    $ref: .\microsoft.graph.appManagementRestrictionState.yaml
   '@odata.type':
     type: string
