--- a/split-openapi/components/schemas/microsoft.graph.security.evidenceRemediationStatus.yaml
+++ b/split-openapi/components/schemas/microsoft.graph.security.evidenceRemediationStatus.yaml
@@ -6,4 +6,10 @@ enum:
   - blocked
   - notFound
   - unknownFutureValue
+  - active
+  - pendingApproval
+  - declined
+  - unremediated
+  - running
+  - partiallyRemediated
 type: string
