--- a/split-openapi/paths/deviceManagement_roleDefinitions.yaml
+++ b/split-openapi/paths/deviceManagement_roleDefinitions.yaml
@@ -4,14 +4,12 @@ description: >-
 get:
   tags:
     - deviceManagement.roleDefinition
-  summary: List deviceAndAppManagementRoleDefinitions
-  description: >-
-    List properties and relationships of the
-    deviceAndAppManagementRoleDefinition objects.
+  summary: List roleDefinitions
+  description: List properties and relationships of the roleDefinition objects.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-list?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-list?view=graph-rest-1.0
   operationId: deviceManagement.ListRoleDefinitions
   parameters:
     - $ref: ..\components\parameters\top.yaml
@@ -64,12 +62,12 @@ get:
 post:
   tags:
     - deviceManagement.roleDefinition
-  summary: Create deviceAndAppManagementRoleDefinition
-  description: Create a new deviceAndAppManagementRoleDefinition object.
+  summary: Create roleDefinition
+  description: Create a new roleDefinition object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-create?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-create?view=graph-rest-1.0
   operationId: deviceManagement.CreateRoleDefinitions
   requestBody:
     description: New navigation property
