--- a/split-openapi/components/examples/microsoft.graph.passwordCredentialConfiguration.yaml
+++ b/split-openapi/components/examples/microsoft.graph.passwordCredentialConfiguration.yaml
@@ -3,3 +3,5 @@ value:
   restrictForAppsCreatedAfterDateTime: '0001-01-01T00:00:00.0000000+00:00'
   restrictionType:
     '@odata.type': microsoft.graph.appCredentialRestrictionType
+  state:
+    '@odata.type': microsoft.graph.appManagementRestrictionState
