--- a/split-openapi/components/schemas/microsoft.graph.conditionalAccessConditionSet.yaml
+++ b/split-openapi/components/schemas/microsoft.graph.conditionalAccessConditionSet.yaml
@@ -11,6 +11,11 @@ properties:
     description: >-
       Applications and user actions included in and excluded from the policy.
       Required.
+  authenticationFlows:
+    anyOf:
+      - $ref: .\microsoft.graph.conditionalAccessAuthenticationFlows.yaml
+      - type: object
+        nullable: true
   clientApplications:
     anyOf:
       - $ref: .\microsoft.graph.conditionalAccessClientApplications.yaml
