--- a/split-openapi/paths/chats_{chat-id}_members_{conversationMember-id}.yaml
+++ b/split-openapi/paths/chats_{chat-id}_members_{conversationMember-id}.yaml
@@ -4,12 +4,11 @@ description: >-
 get:
   tags:
     - chats.conversationMember
-  summary: Get conversationMember
-  description: Retrieve a conversationMember from a chat or channel.
+  summary: Get conversationMember in a chat
+  description: Retrieve a conversationMember from a chat.
   externalDocs:
     description: Find more info here
-    url: >-
-      https://learn.microsoft.com/graph/api/conversationmember-get?view=graph-rest-1.0
+    url: https://learn.microsoft.com/graph/api/chat-get-members?view=graph-rest-1.0
   operationId: chats.GetMembers
   parameters:
     - name: $select
