--- a/split-openapi/paths/chats_{chat-id}_messages.yaml
+++ b/split-openapi/paths/chats_{chat-id}_messages.yaml
@@ -66,15 +66,11 @@ get:
 post:
   tags:
     - chats.chatMessage
-  summary: Send message in a chat
-  description: >-
-    Send a new chatMessage in the specified chat. This API can't create a new
-    chat; you must use the list chats method to retrieve the ID of an existing
-    chat before you can create a chat message.
+  summary: Send chatMessage in a channel or a chat
+  description: Send a new chatMessage in the specified channel or a chat.
   externalDocs:
     description: Find more info here
-    url: >-
-      https://learn.microsoft.com/graph/api/chat-post-messages?view=graph-rest-1.0
+    url: https://learn.microsoft.com/graph/api/chatmessage-post?view=graph-rest-1.0
   operationId: chats.CreateMessages
   requestBody:
     description: New navigation property
