--- a/split-openapi/paths/communications_calls_{call-id}_participants_invite.yaml
+++ b/split-openapi/paths/communications_calls_{call-id}_participants_invite.yaml
@@ -4,16 +4,12 @@ post:
     - communications.call
   summary: Invoke action invite
   description: >-
-    Delete a specific participant in a call. In some situations, it is
-    appropriate for an application to remove a participant from an active call.
-    This action can be done before or after the participant answers the call.
-    When an active caller is removed, they are immediately dropped from the call
-    with no pre- or post-removal notification. When an invited participant is
-    removed, any outstanding add participant request is canceled. 
+    Invite participants to the active call. For more information about how to
+    handle operations, see commsOperation.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/participant-delete?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/participant-invite?view=graph-rest-1.0
   operationId: communications.calls.call.participants.invite
   requestBody:
     description: Action parameters
