--- a/split-openapi/paths/deviceAppManagement_managedAppRegistrations_{managedAppRegistration-id}.yaml
+++ b/split-openapi/paths/deviceAppManagement_managedAppRegistrations_{managedAppRegistration-id}.yaml
@@ -4,14 +4,12 @@ description: >-
 get:
   tags:
     - deviceAppManagement.managedAppRegistration
-  summary: Get androidManagedAppRegistration
-  description: >-
-    Read properties and relationships of the androidManagedAppRegistration
-    object.
+  summary: Get iosManagedAppRegistration
+  description: Read properties and relationships of the iosManagedAppRegistration object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-mam-androidmanagedappregistration-get?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-mam-iosmanagedappregistration-get?view=graph-rest-1.0
   operationId: deviceAppManagement.GetManagedAppRegistrations
   parameters:
     - name: $select
