--- a/split-openapi/paths/deviceAppManagement_managedAppStatuses.yaml
+++ b/split-openapi/paths/deviceAppManagement_managedAppStatuses.yaml
@@ -4,12 +4,12 @@ description: >-
 get:
   tags:
     - deviceAppManagement.managedAppStatus
-  summary: List managedAppStatuses
-  description: List properties and relationships of the managedAppStatus objects.
+  summary: List managedAppStatusRaws
+  description: List properties and relationships of the managedAppStatusRaw objects.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-mam-managedappstatus-list?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-mam-managedappstatusraw-list?view=graph-rest-1.0
   operationId: deviceAppManagement.ListManagedAppStatuses
   parameters:
     - $ref: ..\components\parameters\top.yaml
