--- a/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}.yaml
+++ b/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}.yaml
@@ -4,12 +4,12 @@ description: >-
 get:
   tags:
     - deviceAppManagement.managedEBook
-  summary: Get managedEBook
-  description: Read properties and relationships of the managedEBook object.
+  summary: Get iosVppEBook
+  description: Read properties and relationships of the iosVppEBook object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-books-managedebook-get?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-books-iosvppebook-get?view=graph-rest-1.0
   operationId: deviceAppManagement.GetManagedEBooks
   parameters:
     - name: $select
