--- a/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}_assignments.yaml
+++ b/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}_assignments.yaml
@@ -62,12 +62,12 @@ get:
 post:
   tags:
     - deviceAppManagement.managedEBook
-  summary: Create managedEBookAssignment
-  description: Create a new managedEBookAssignment object.
+  summary: Create iosVppEBookAssignment
+  description: Create a new iosVppEBookAssignment object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-books-managedebookassignment-create?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-books-iosvppebookassignment-create?view=graph-rest-1.0
   operationId: deviceAppManagement.managedEBooks.CreateAssignments
   requestBody:
     description: New navigation property
