--- a/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}_assignments_{managedEBookAssignment-id}.yaml
+++ b/split-openapi/paths/deviceAppManagement_managedEBooks_{managedEBook-id}_assignments_{managedEBookAssignment-id}.yaml
@@ -47,12 +47,12 @@ get:
 patch:
   tags:
     - deviceAppManagement.managedEBook
-  summary: Update iosVppEBookAssignment
-  description: Update the properties of a iosVppEBookAssignment object.
+  summary: Update managedEBookAssignment
+  description: Update the properties of a managedEBookAssignment object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-books-iosvppebookassignment-update?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-books-managedebookassignment-update?view=graph-rest-1.0
   operationId: deviceAppManagement.managedEBooks.UpdateAssignments
   requestBody:
     description: New navigation property values
