--- a/split-openapi/paths/deviceAppManagement_mobileAppConfigurations.yaml
+++ b/split-openapi/paths/deviceAppManagement_mobileAppConfigurations.yaml
@@ -4,12 +4,14 @@ description: >-
 get:
   tags:
     - deviceAppManagement.managedDeviceMobileAppConfiguration
-  summary: List iosMobileAppConfigurations
-  description: List properties and relationships of the iosMobileAppConfiguration objects.
+  summary: List managedDeviceMobileAppConfigurations
+  description: >-
+    List properties and relationships of the managedDeviceMobileAppConfiguration
+    objects.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-apps-iosmobileappconfiguration-list?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-apps-manageddevicemobileappconfiguration-list?view=graph-rest-1.0
   operationId: deviceAppManagement.ListMobileAppConfigurations
   parameters:
     - $ref: ..\components\parameters\top.yaml
