--- a/split-openapi/paths/deviceAppManagement_mobileAppConfigurations_{managedDeviceMobileAppConfiguration-id}.yaml
+++ b/split-openapi/paths/deviceAppManagement_mobileAppConfigurations_{managedDeviceMobileAppConfiguration-id}.yaml
@@ -4,12 +4,14 @@ description: >-
 get:
   tags:
     - deviceAppManagement.managedDeviceMobileAppConfiguration
-  summary: Get iosMobileAppConfiguration
-  description: Read properties and relationships of the iosMobileAppConfiguration object.
+  summary: Get managedDeviceMobileAppConfiguration
+  description: >-
+    Read properties and relationships of the managedDeviceMobileAppConfiguration
+    object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-apps-iosmobileappconfiguration-get?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-apps-manageddevicemobileappconfiguration-get?view=graph-rest-1.0
   operationId: deviceAppManagement.GetMobileAppConfigurations
   parameters:
     - name: $select
