--- a/split-openapi/paths/deviceAppManagement_mobileApps_{mobileApp-id}.yaml
+++ b/split-openapi/paths/deviceAppManagement_mobileApps_{mobileApp-id}.yaml
@@ -4,12 +4,12 @@ description: >-
 get:
   tags:
     - deviceAppManagement.mobileApp
-  summary: Get managedAndroidLobApp
-  description: Read properties and relationships of the managedAndroidLobApp object.
+  summary: Get macOSOfficeSuiteApp
+  description: Read properties and relationships of the macOSOfficeSuiteApp object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-apps-managedandroidlobapp-get?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-apps-macosofficesuiteapp-get?view=graph-rest-1.0
   operationId: deviceAppManagement.GetMobileApps
   parameters:
     - name: $select
@@ -47,12 +47,12 @@ get:
 patch:
   tags:
     - deviceAppManagement.mobileApp
-  summary: Update windowsMicrosoftEdgeApp
-  description: Update the properties of a windowsMicrosoftEdgeApp object.
+  summary: Update windowsWebApp
+  description: Update the properties of a windowsWebApp object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-apps-windowsmicrosoftedgeapp-update?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-apps-windowswebapp-update?view=graph-rest-1.0
   operationId: deviceAppManagement.UpdateMobileApps
   requestBody:
     description: New navigation property values
@@ -76,12 +76,12 @@ patch:
 delete:
   tags:
     - deviceAppManagement.mobileApp
-  summary: Delete windowsUniversalAppX
-  description: Deletes a windowsUniversalAppX.
+  summary: Delete windowsMobileMSI
+  description: Deletes a windowsMobileMSI.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-apps-windowsuniversalappx-delete?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-apps-windowsmobilemsi-delete?view=graph-rest-1.0
   operationId: deviceAppManagement.DeleteMobileApps
   parameters:
     - name: If-Match
