--- a/split-openapi/paths/deviceManagement_deviceConfigurations.yaml
+++ b/split-openapi/paths/deviceManagement_deviceConfigurations.yaml
@@ -4,14 +4,14 @@ description: >-
 get:
   tags:
     - deviceManagement.deviceConfiguration
-  summary: List windows10GeneralConfigurations
+  summary: List androidGeneralDeviceConfigurations
   description: >-
-    List properties and relationships of the windows10GeneralConfiguration
+    List properties and relationships of the androidGeneralDeviceConfiguration
     objects.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-deviceconfig-windows10generalconfiguration-list?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-deviceconfig-androidgeneraldeviceconfiguration-list?view=graph-rest-1.0
   operationId: deviceManagement.ListDeviceConfigurations
   parameters:
     - $ref: ..\components\parameters\top.yaml
@@ -64,12 +64,12 @@ get:
 post:
   tags:
     - deviceManagement.deviceConfiguration
-  summary: Create iosCustomConfiguration
-  description: Create a new iosCustomConfiguration object.
+  summary: Create windows10EnterpriseModernAppManagementConfiguration
+  description: Create a new windows10EnterpriseModernAppManagementConfiguration object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-deviceconfig-ioscustomconfiguration-create?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-deviceconfig-windows10enterprisemodernappmanagementconfiguration-create?view=graph-rest-1.0
   operationId: deviceManagement.CreateDeviceConfigurations
   requestBody:
     description: New navigation property
