--- a/split-openapi/paths/deviceManagement_roleDefinitions_{roleDefinition-id}.yaml
+++ b/split-openapi/paths/deviceManagement_roleDefinitions_{roleDefinition-id}.yaml
@@ -4,14 +4,12 @@ description: >-
 get:
   tags:
     - deviceManagement.roleDefinition
-  summary: Get deviceAndAppManagementRoleDefinition
-  description: >-
-    Read properties and relationships of the
-    deviceAndAppManagementRoleDefinition object.
+  summary: Get roleDefinition
+  description: Read properties and relationships of the roleDefinition object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-get?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-get?view=graph-rest-1.0
   operationId: deviceManagement.GetRoleDefinitions
   parameters:
     - name: $select
@@ -49,12 +47,12 @@ get:
 patch:
   tags:
     - deviceManagement.roleDefinition
-  summary: Update deviceAndAppManagementRoleDefinition
-  description: Update the properties of a deviceAndAppManagementRoleDefinition object.
+  summary: Update roleDefinition
+  description: Update the properties of a roleDefinition object.
   externalDocs:
     description: Find more info here
     url: >-
-      https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-update?view=graph-rest-1.0
+      https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-update?view=graph-rest-1.0
   operationId: deviceManagement.UpdateRoleDefinitions
   requestBody:
     description: New navigation property values
